--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <body>
 <a href="MICGenerator.html">Magic Item Compendium generator</a>
 <br>
-<a href="UEGenerator.html">Ultimate Equipment generator</a> - warning! Very, very, very incomplete!
+<a href="UEGenerator.html">Ultimate Equipment generator</a>
 </body></html>
