Game of Thrones crafting js app

--- a/index.html
+++ b/index.html
@@ -3,4 +3,6 @@
 <a href="MICGenerator.html">Magic Item Compendium generator</a>
 <br>
 <a href="UEGenerator.html">Ultimate Equipment generator</a>
+<br>
+<a href="GoTA-crafting.html">Game of Thrones Ascent item calculator</a>
 </body></html>
