--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <body>
+<a href="ArduinoTheOOWay.html">Arduino, the Object Oriented way.</a>
+<br>
 <a href="MICGenerator.html">Magic Item Compendium generator</a>
 <br>
 <a href="UEGenerator.html">Ultimate Equipment generator</a>
