--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <p>
 "Smelter Too Small" - Inspired by MumboJumbo's "Too Small!" videos and his super-smelter. <a href="SmelterTooSmall.zip">This is a zipped minecraft save directory</a>.
 </p>
+<h1>3d</h1>
+<a href="3d/index.txt">index</a>
 <h1>Older Stuff</h1>
 <p ><span ><a href="ArduinoTheOOWay.html">Arduino, the Object Oriented way.</a></span></p>
 <p ><span><a href="MICGenerator.html">Magic Item Compendium generator</a></span></p>
