--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <body>
 <h1>Minecraft</h1>
 <p>
+<a href="MinecraftDome/index.html">MinecraftDome</a> - a javascript webapp for generating dome shapes.
+</p>
+<p>
 "Smelter Too Small" - Inspired by MumboJumbo's "Too Small!" videos and his super-smelter. <a href="SmelterTooSmall.zip">This is a zipped minecraft save directory</a>.
 </p>
 <h1>3d</h1>
