--- a/MinecraftDome/index.html
+++ b/MinecraftDome/index.html
@@ -12,5 +12,9 @@
 		Or, you can <a href="../MinecraftDome.zip">download the zip</a> and
 		run it from a local directory.
 	</p>
+	
+	<img src="1.png"/>
+	<img src="2.png"/>
+	<img src="3.png"/>
 </body>
 </html>
