added example to the front page

--- a/MinecraftDome/index.html
+++ b/MinecraftDome/index.html
@@ -13,6 +13,11 @@
 		run it from a local directory.
 	</p>
 	
+	<p>
+	 <a href="Funnel.html">	<img src="Funnel.png"><br/>Click to see the generated building plans for this object.</a>
+	</p>
+	
+	<hr/>
 	<img src="1.png"/>
 	<img src="2.png"/>
 	<img src="3.png"/>
