--- a/MinecraftDome/index.html
+++ b/MinecraftDome/index.html
@@ -14,12 +14,20 @@
 	</p>
 	
 	<p>
-	 <a href="Funnel.html">	<img src="Funnel.png"><br/>Click to see the generated building plans for this object.</a>
+	 <a href="Funnel.html">	
+	<img src="Funnel.png"><br/>
+	Click to see the generated building plans for this object.</a>
 	</p>
 	
 	<hr/>
 	<img src="1.png"/>
 	<img src="2.png"/>
 	<img src="3.png"/>
+	<br/>
+	<a href=Bridge.html>
+	<img src="BridgeA.png" width="49%"/>
+	<img src="BridgeB.png" width="49%"/>
+	<br/>
+	Click to see the generated building plans for this object.</a>
 </body>
 </html>
